src/css/footer.css
.footer {
  background-color: var(--color-scheme-5-background);
  color: var(--color-scheme-5-text);
}

.footer__container {
  padding-top: 80px;
  padding-bottom: 80px;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.footer__top {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
}

.footer__logo-icon {
  display: block;
  fill: var(--color-scheme-5-text);
}

.footer__nav-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
}

.footer__nav-link {
  font-size: 16px;
  line-height: 1.5;
  color: var(--color-scheme-1-text);
  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer__nav-link:hover,
.footer__nav-link:focus {
  opacity: 0.5;
}

.footer__nav-link:active {
  opacity: 0.6;
}

.footer__social-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 11px;
}

.footer__social-link {
  display: flex;
  fill: var(--color-scheme-5-text);
  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer__social-link:hover,
.footer__social-link:focus {
  opacity: 0.5;
}

.footer__copyright {
  text-align: center;
  font-size: 14px;
  line-height: 1.5;
  color: var(--color-scheme-5-text);
  border-top: 1px solid var(--color-scheme-5-border);
  padding-top: 24px;
}

@media (min-width: 768px) {
  .footer__nav {
    display: block;
    flex-basis: 100%;
  }

  .footer__nav-list {
    flex-direction: row;
    justify-content: center;
  }
}

@media (min-width: 1440px) {
  .footer__container {
    padding-block: 48px;
  }

  .footer__top {
    flex-direction: row;
    justify-content: flex-start;
    gap: 32px;
}

